@@ -1,3 +1,7 @@
+2018-10-17  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gcc.c-torture/execute/pr87623.c: New test.
+
 2018-10-15  Richard Biener  <rguenther@suse.de>
 
 	Backport from mainline
